k8s/dev/ksox-landing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksox-landing
  labels:
    app: ksox-landing
spec:
  selector:
    matchLabels:
      app: ksox-landing
  template:
    metadata:
      labels:
        app: ksox-landing
    spec:
      containers:
        - name: ksox-landing
          image: dev-ksox-landing
          # envFrom:
          #   - secretRef:
          #       name: ksox-landing-secrets
          #   - configMapRef:
          #       name: ksox-landing-config
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 1000Mi
              cpu: 1000m
---
apiVersion: v1
kind: Service
metadata:
  name: ksox-landing
spec:
  selector:
    app: ksox-landing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ksox-landing
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - landing.ksox.finance.internal.visoft.solutions
      secretName: internal-visoft-solutions-tls
  rules:
    - host: landing.ksox.finance.internal.visoft.solutions
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ksox-landing
                port:
                  number: 80
